# CLAUDEMD-PRO

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  package-lock.json  package.json  vitest.config.ts
.github/: FUNDING.yml
src/analyzers/: architecture.ts  ci-cd.ts  commands.ts  database.ts  domain-analyzer.ts  env.ts  file-reader.ts  file-scanner.ts  framework-enrichment.ts  git-history.ts  gotchas.ts  index.ts  stack-detector.ts  style-analyzer.ts  testing.ts
src/cli/: budget.ts  compare.ts  evolve.ts  generate.ts  index.ts  install.ts  lint.ts
src/config/: index.ts  schema.ts
src/core/: generate.ts  lint.ts
src/evolve/: index.ts
src/frameworks/: astro.ts  bun.ts  deno.ts  django.ts  dotnet.ts  fastapi.ts  flutter.ts  go.ts  hono.ts  kotlin.ts  laravel.ts  nestjs.ts  nuxt.ts  phoenix.ts  remix.ts  rust.ts  spring.ts  svelte.ts  swift.ts
src/github-action/: action.ts
src/linter/: index.ts  types.ts
src/mcp/: index.ts
src/token/: index.ts
tests/analyzers/: architecture-deepscan.test.ts  command-descriptions.test.ts  domain-filter.test.ts  expanded-fixtures.test.ts  file-scanner.test.ts  frameworks.test.ts  gotchas-fallback.test.ts  integration.test.ts  naming-detection.test.ts  new-fixtures.test.ts  new-framework-fixtures.test.ts  stack-detector.test.ts  version-parsing.test.ts
tests/cli/: cli-commands.test.ts
tests/fixtures/rust-app/: .env.example  Cargo.toml
tests/fixtures/rust-app/src/: main.rs
tests/fixtures/rust-app/src/handlers/: mod.rs  users.rs
tests/fixtures/rust-app/src/models/: user.rs
(+162 files in other folders)
